Stop text from overflowing out of activity container when zooming in

--- a/views/static/css/approver.css
+++ b/views/static/css/approver.css
@@ -302,6 +302,7 @@ header{
 	position: relative;
 	display: inline-block;
 	margin: 0 2em;
+    overflow-x: auto;
 }
 
 #main-content .content-feed .content-wrapper .goto{
